fix du fait du scroll horizontale non désiré de la version mobile

--- a/style.css
+++ b/style.css
@@ -1118,7 +1118,7 @@ i:hover {
     align-items: center;
     font-weight: bold;
     width: 370px;
-    margin-left: -186px;
+    margin-left: -190px;
     height: 30px;
   }
   .heberact {
@@ -1337,7 +1337,7 @@ i:hover {
     grid-gap: 0;
   }
   .paddaside {
-    padding: 2.2%;
+    padding: 0.5%;
     background-color: #f2f2f2;
     border-radius: 0px;
   }
@@ -1470,10 +1470,16 @@ i:hover {
   /*footer mobile*/
   .flexfoot {
     display: flow-root;
-    width: 355px;
+    width: 375px;
     display: flex;
     flex-direction: column;
-    padding-left: 150px;
+    padding-left: 0px;
     background-color: #f2f2f2;
+    margin-left: 0px;
+  }
+  /*margfoot mobile*/
+  .margfoot {
+    margin-right: 0;
+    margin-left: 13%;
   }
 }
